--- a/html/src/localization/zh-CN/en.json
+++ b/html/src/localization/zh-CN/en.json
@@ -781,7 +781,7 @@
                 "invite": "仅允许邀请加入",
                 "closed": "不允许任何人加入",
                 "joined": "已加入",
-                "banned": "您已被群组封禁",
+                "banned": "你已被群组封禁",
                 "visible": "可见性：所有人",
                 "friends": "可见性：好友",
                 "hidden": "可见性：隐藏",
@@ -1247,8 +1247,8 @@
             "name": "名称",
             "date": "日期",
             "action": "操作",
-            "auto_backup": "只要VRCX在运行，就会每周自动备份一次VRC的设置项，您也可以在这里手动备份和恢复您的VRC设置项",
-            "restore_prompt": "注意到您已启用 VRC 设置选项的自动备份，但这台计算机上没有发现任何备份。如果您想从备份中恢复，可以从此处进行恢复。"
+            "auto_backup": "只要VRCX在运行，就会每周自动备份一次VRC的设置项，你也可以在这里手动备份和恢复你的VRC设置项",
+            "restore_prompt": "注意到你已启用 VRC 设置选项的自动备份，但这台计算机上没有发现任何备份。如果你想从备份中恢复，可以从此处进行恢复。"
         },
         "group_member_moderation": {
             "header": "群组成员管理",
