feat: :memo: アップデート & 表記ゆれ修正
「ロール」と「役職」の表記ゆれを修正、「ロール」に統一

--- a/html/src/localization/ja/en.json
+++ b/html/src/localization/ja/en.json
@@ -819,8 +819,8 @@
                 "id": "グループID",
                 "id_tooltip": "IDをコピー",
                 "joined_at": "参加日時",
-                "roles": "役職",
-                "role": "役職:",
+                "roles": "ロール",
+                "role": "ロール:",
                 "role_description": "説明:",
                 "role_updated_at": "更新日:",
                 "role_created_at": "作成日:",
@@ -1237,42 +1237,42 @@
             "upload": "アップロード"
         },
         "registry_backup": {
-            "header": "VRC Registry Settings Backup",
-            "backup": "Backup",
-            "restore": "Restore",
-            "save_to_file": "Save to file",
-            "delete": "Delete",
-            "restore_from_file": "Restore from file",
-            "reset": "Reset",
-            "name": "Name",
-            "date": "Date",
-            "action": "Action",
-            "auto_backup": "Weekly Auto Backup",
-            "restore_prompt": "VRCX has noticed auto backup of VRC registry settings is enabled but this computer dosn't have any, if you'd like to restore from backup you can do so from here."
+            "header": "VRCのレジストリ設定のバックアップ",
+            "backup": "バックアップ",
+            "restore": "復元",
+            "save_to_file": "ファイルに保存",
+            "delete": "削除",
+            "restore_from_file": "ファイルから復元",
+            "reset": "リセット",
+            "name": "名前",
+            "date": "日付",
+            "action": "アクション",
+            "auto_backup": "毎週ごとの自動バックアップ",
+            "restore_prompt": "VRCのレジストリ設定の自動バックアップが有効なようですが、このコンピューターからバックアップファイルを見つけられませんでした。バックアップから復元したい場合はこちらから復元できます。"
         },
         "group_member_moderation": {
-            "header": "Group Member Moderation",
-            "notes": "Manager Note",
-            "note_placeholder": "Click to add a note",
-            "actions": "Actions",
-            "kick": "Kick",
-            "ban": "Ban",
-            "save_note": "Save Note",
-            "group_members": "Group Members",
-            "progress": "Progress:",
-            "display_name": "Display Name",
-            "visibility": "Visibility",
-            "avatar": "Avatar",
-            "joined_at": "Joined At",
-            "note": "Note",
-            "roles": "Roles",
-            "selected_users": "Selected Users",
-            "select_all": "Select All",
-            "cancel": "Cancel",
-            "choose_roles_placeholder": "Choose Roles",
-            "selected_roles": "Selected Roles",
-            "remove_roles": "Remove Roles",
-            "add_roles": "Add Roles"
+            "header": "グループメンバーを管理",
+            "notes": "管理用ノート",
+            "note_placeholder": "クリックしてノートを追加",
+            "actions": "アクション",
+            "kick": "キック",
+            "ban": "BAN",
+            "save_note": "ノートを保存",
+            "group_members": "グループメンバー:",
+            "progress": "進捗:",
+            "display_name": "表示名",
+            "visibility": "表示範囲",
+            "avatar": "アバター",
+            "joined_at": "参加日時",
+            "note": "ノート",
+            "roles": "ロール",
+            "selected_users": "選択したユーザー",
+            "select_all": "全て選択",
+            "cancel": "キャンセル",
+            "choose_roles_placeholder": "ロールを選択",
+            "selected_roles": "選択したロール",
+            "remove_roles": "ロールを削除",
+            "add_roles": "ロールを追加"
         }
     },
     "prompt": {
