Update localization ru_RU

--- a/html/src/localization/ru/en.json
+++ b/html/src/localization/ru/en.json
@@ -403,6 +403,10 @@
                         "header": "Автоматически управлять кэшем при закрытии VRChat",
                         "description": "Автоматически удалять старые версии из кэша"
                     },
+                    "disable_local_world_persistence": {
+                        "header": "Отключить Local World Persistence",
+                        "description": "Отключить локальный веб-сервер (требуется перезапуск)"
+                    },
                     "remote_database": {
                         "header": "Удаленная база данных аватаров",
                         "enable": "Включить",
